# particle-filter-tutorial

./: .gitignore  README.md  pyproject.toml
src/particle_filter_tutorial/core/particle_filters/: __init__.py  adaptive_kld.py  adaptive_particle_filter_kld.py  adaptive_particle_filter_sl.py  adaptive_sl.py  auxiliary.py  auxiliary_particle_filter.py  base.py  extended_kalman.py  extended_kalman_particle_filter.py  max_weight_resampling.py  nepr.py  particle_filter_base.py  range_only.py  sir.py
src/particle_filter_tutorial/core/resampling/: __init__.py  helpers.py  resampler.py
src/particle_filter_tutorial/demos/: challenge1_compare_resampling_schemes.py  challenge1_degeneracy.py  challenge2_impoverishment.py  challenge3_divergence.py  challenge5_adaptive_particle_filter.py  demo_running_example_extended_Kalman_particle_filter.py  particle_filter_factory.py
src/particle_filter_tutorial/demos/challenge1_compare_resampling_algorithms/: challenge1_compare_resampling_algorithms.py
src/particle_filter_tutorial/demos/demo_range_only/: demo_range_only.py
src/particle_filter_tutorial/demos/demo_running_example/: demo_running_example.py  particle_filter.py  visualizer.py  visualizer_factory.py
src/particle_filter_tutorial/demos/plot_particles/: 1_filter_new_particles.py  (+8 more)
src/particle_filter_tutorial/mpl/: axes.py  collections.py
src/particle_filter_tutorial/simulator/: __init__.py  robot.py  robot_range_measurement.py  visualizer.py  world.py
src/particle_filter_tutorial/viz/: cloud_driver.py  cloud_primitives.py
tests/core/particle_filters/: conftest.py
(+2 files in other folders)
